# plane-view

./: .gitignore  README.md  meson.build
app/: main.cc  meson.build  piped.cc
examples/: coswave  sincos  sinewave
libplaneview/: axis.cc  axis.hh  color.cc  color.hh  compat-cpp-20.hh  meson.build  plotter.cc  plotter.hh
scripts/planeview/: DESCRIPTION  NAMESPACE
scripts/planeview/R/: planeview.r
scripts/planeview/man/: pview.Rd  pview.app.Rd  pvplot.Rd
test/: doctest.h  meson.build  test.cc
